# Momentum

./: .clinerules  README.md  main.py  pyproject.toml
backend/: scripts.sql
docs/: agentic_workflows.md  agentic_workflows_technical.md  architecture.md  backend.md  business_model.md  frontend.md  mvp_plan.md  user_stories.md
frontend/Chefy/: package-lock.json  package.json
frontend/supabase/: package-lock.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
