[project]
name = "momentum"
version = "0.1.0"
description = "Momentum"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "instructor>=1.7.0",
    "mcp>=1.2.1",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "numpy>=2.1.3",
    "scikit-learn>=1.6.0",
    "sqlalchemy>=2.0.39",
    "supabase>=2.15.0",
    "mcp-agent>=0.0.14",
]
